Change wording of metadata editor "cancel" button

--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/metadataEditor/header.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/metadataEditor/header.xhtml
@@ -21,7 +21,7 @@
                           title="#{MetadataProcessor.process.title} - #{msgs.metadataEdit}"/>
         </h3>
         <span class="button-wrapper">
-            <p:button value="#{msgs.cancel}"
+            <p:button value="#{msgs.exit}"
                       outcome="#{MetadataProcessor.referringView}"
                       icon="fa fa-times fa-lg"
                       iconPos="right"
