--- a/Kitodo/src/main/webapp/WEB-INF/resources/css/kitodo.css
+++ b/Kitodo/src/main/webapp/WEB-INF/resources/css/kitodo.css
@@ -559,6 +559,7 @@ section#content-section {
 .content-header {
     height: 36px;
     padding: 1.0em 16px;
+    position: relative;
 }
 
 .content-header .ui-panel-content {
@@ -949,9 +950,8 @@ Metadata Editor
     padding: 1em 16px;
 }
 
-/* FIXME: don't use static number in width! */
 #metadataEditorHeader h3 {
-    width: 68%;
+    width: calc(100% - 450px);
     display: inline-block;
     white-space: nowrap;
     overflow-x: hidden;
@@ -964,6 +964,8 @@ Metadata Editor
 }
 
 #metadataEditorHeader .button-wrapper {
+    position: absolute;
+    right: 0;
     vertical-align: top;
     white-space: nowrap;
     float: right;
