--- a/Kitodo/src/main/webapp/WEB-INF/resources/css/pattern-library.css
+++ b/Kitodo/src/main/webapp/WEB-INF/resources/css/pattern-library.css
@@ -24,6 +24,7 @@
     --error-border: #b94a48;
     --error-background: #f2dede;
     --carbonblue: #1e3946;
+    --transblue: #f2fbff;
 
     --progress-closed: #42ba37;
     --progress-inwork: #c3d300;
