--- a/Kitodo/src/main/webapp/WEB-INF/resources/css/kitodo.css
+++ b/Kitodo/src/main/webapp/WEB-INF/resources/css/kitodo.css
@@ -333,7 +333,7 @@ body.first-visit #portal-header {
 }
 
 #header-nav #nav-user li.toggle-list a.ui-commandlink {
-    border-top: 1px solid #d3d3d3
+    border-top: 1px solid #d3d3d3;
 }
 
 #header-nav #nav-user > li > div > span > div {
@@ -419,6 +419,32 @@ body.first-visit #portal-header {
     vertical-align: middle;
 }
 
+/*----------------------------------------------------------------------
+Breadcrumb menu
+----------------------------------------------------------------------*/
+
+#breadcrumbMenu {
+    padding: 0;
+}
+
+#breadcrumbMenu li:first-child a.ui-menuitem-link {
+    background-image: none;
+}
+
+#breadcrumbMenu li:first-child a.ui-menuitem-link span:hover {
+    color: var(--default-dark);
+    background-color: white;
+}
+
+#breadcrumbMenu li:first-child a.ui-menuitem-link span:after {
+    content: '\f015';
+    font-family: 'FontAwesome';
+    text-indent: 0;
+    position: absolute;
+    left: 0;
+    width: 100%;
+}
+
 #breadcrumbMenu a.ui-menuitem-link {
     background-color: #064f80;
     border-radius: 3px;
@@ -429,13 +455,69 @@ body.first-visit #portal-header {
     text-align: center;
 }
 
-#breadcrumbMenu {
-    padding: 0;
+#breadcrumbMenu li[role=menuitem] {
+    overflow: visible;
+}
+
+#breadcrumbMenu li:not(:first-child) a.ui-menuitem-link {
+    color: white;
+    background-color: #064f80;
+    width: 36px;
+    transition: color .5s, background-color .5s, width .5s;
+}
+
+#breadcrumbMenu li:not(:first-child) a.ui-menuitem-link:hover {
+    color: var(--default-dark);
+    background-color: white;
+    width: unset;
 }
 
 #breadcrumbMenu a.ui-menuitem-link {
     margin-top: 0;
     color: white;
+    text-decoration: none;
+    font-size: small;
+    transition: color .5s, background-color .5s;
+}
+
+#breadcrumbMenu a.ui-menuitem-link:first-child:hover {
+    color: var(--default-dark);
+    background-color: white;
+}
+
+#breadcrumbMenu span.ui-menuitem-text {
+    height: 100%;
+    padding-left: 8px;
+    text-overflow: ellipsis;
+}
+
+#breadcrumbMenu span.ui-menuitem-text:hover {
+    padding-right: 8px;
+}
+
+#breadcrumbMenu li.ui-breadcrumb-chevron {
+    display: none;
+}
+
+#breadcrumbMenu ul li[role=menuitem]:not(:first-child) {
+    margin-left: var(--default-half-size);
+}
+
+#breadcrumbMenu ul li[role=menuitem]:not(:first-child)::before {
+    content: " ";
+    background-color: #064f80;
+    transform: rotate(-45deg);
+    background-image: none;
+    border-width: 3px 0 0 3px;
+    border-style: solid;
+    border-color: var(--primary);
+    top: 11px;
+    left: -10px;
+    display: inline-block;
+    position: absolute;
+    height: 12px;
+    width: 12px;
+    z-index: 1;
 }
 
 
