--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/header.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/header.xhtml
@@ -30,7 +30,9 @@
 
         <section id="portal-search">
             <h:form id="search-form" action="">
-                <p:inputText id="search-field" a:placeholder="#{msgs.search}"/><p:inputText id="search-field-short" a:placeholder="#{msgs.search}"/><button type="submit"><i class="fa fa-search"/></button>
+                <p:inputText id="search-field" a:placeholder="#{msgs.search}"/>
+                <p:inputText id="search-field-short" a:placeholder="#{msgs.search}"/>
+                <p:commandButton type="submit" icon="fa fa-search"/>
             </h:form>
         </section>
 
