--- a/Kitodo/src/main/webapp/WEB-INF/resources/css/kitodo.css
+++ b/Kitodo/src/main/webapp/WEB-INF/resources/css/kitodo.css
@@ -318,10 +318,6 @@ body.first-visit #portal-header {
     font-weight: 400;
     }
 
-#header-nav li ul li:last-child a {
-    background-color: var(--cloudy-gray);
-    }
-
 #header-nav #nav-user li.color-orange a {
     background-color: var(--orange);
     border-color: var(--orange);
@@ -367,38 +363,37 @@ body.first-visit #portal-header {
     color: var(--orange);
     }
 
-#header-nav li ul li.nav-pic-text a,
-#header-nav li ul li.nav-pic-text:last-child a {
-    padding: 12px 1px 15px 1px;
-    display: inline-block !important;
-    width: 33.33%;
-    float: left;
-    font-size: 10px;
-    border-top: 0px none;
-    text-align: center;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
+#dashboard-menu + ul {
     background: var(--light-gray);
-    }
+    box-sizing: border-box;
+    padding: calc(32px - 8px);
+}
 
-#header-nav li ul li.nav-pic-text i {
+#dashboard-menu + ul #dashboard-menu-header h3 {
+    padding: 0 8px 8px 8px;
+}
+
+#dashboard-menu + ul .nav-pic-text,
+#dashboard-menu + ul .nav-pic-text:last-child {
+    display: inline-block;
+    width: calc(32.6% - 16px);
+    margin: 8px;
+    background: var(--pure-white);
+    box-sizing: border-box;
+}
+
+#dashboard-menu + ul .nav-pic-text a {
+    border: none;
+    padding: 16px;
+    text-align: center;
+}
+
+#dashboard-menu + ul .nav-pic-text a i {
+    display: block;
+    color: var(--blue);
     font-size: 22px;
-    }
-
-#header-nav li ul li.nav-pic-text a i {
-    display: block;
     padding-bottom: 10px;
-    }
-
-#header-nav li ul li.nav-pic-text:last-child:after {
-    content: ".";
-    clear: both;
-    display: block;
-    visibility: hidden;
-    height: 0px;
-    padding-bottom: 20px;
-    }
+}
 
 #header-nav .languageButtonCell {
     width: 50px;
